# anhc_botrl

./: .gitignore  GUILD.md  README.md  test_planner.py
bench_results/: benchmark_20260408_094733.csv  benchmark_20260408_094910.csv  benchmark_20260408_101341.csv  benchmark_20260408_103035.csv  report.md
docs/: BENCHMARK_PLAN.md  BENCHMARK_PLAN_v1.md  BUG.md  HOW_TO_NAVIGATE.md  METRIX.md  architecture.md
docs/prompts/: HOW_TO_USE_PROMPTS.md  phase2_cursor_prompt.md  phase2_upgraded.md  phase_01_algorithms.md  phase_02_inflation_layer.md  phase_03_benchmark_metrics.md  phase_04_office_v2_map.md  phase_05_dashboard_viz.md  phase_06_robot_visual_4wheel.md  phase_07_office_v2_obj_mtl_migration.md
mpl_cache/: fontlist-v330.json
ros_log/: latest
scripts/: anhc_save_map.sh  build.sh  clean.sh  launch_all.sh  run_benchmark_smoke.sh  test_end_to_end.sh
src/anhc_behavior/: package.xml  setup.cfg  setup.py
src/anhc_benchmark/: package.xml  setup.cfg  setup.py
src/anhc_benchmark/anhc_benchmark/: anhc_benchmark_gz_obstacle_node.py  anhc_benchmark_runner_node.py  anhc_live_metrics_node.py  anhc_results_analyzer_node.py  bench_paths.py  mock_planning_backend.py
src/anhc_benchmark/config/: anhc_benchmark_scenarios.yaml  anhc_benchmark_scenarios_smoke.yaml
src/anhc_benchmark/launch/: anhc_benchmark.launch.py  anhc_benchmark_smoke.launch.py
src/anhc_benchmark/test/: test_smoke_scenarios_yaml.py
src/anhc_control/: CMakeLists.txt  package.xml
src/anhc_description/: CMakeLists.txt  package.xml
src/anhc_description/launch/: display.launch.py
src/anhc_description/rviz/: anhc_bot.rviz
src/anhc_description/urdf/: anhc_bot.gazebo.xacro  anhc_bot.urdf.xacro
src/anhc_localization/: CMakeLists.txt  package.xml
src/anhc_localization/config/: anhc_amcl_nav.yaml  anhc_slam_localization.yaml  anhc_slam_mapping.yaml  anhc_slam_mapping_factory.yaml  ekf_params.yaml  slam_params.yaml
src/anhc_localization/launch/: anhc_localization.launch.py  anhc_mapping_phase.launch.py
src/anhc_localization/scripts/: anhc_imu_filter_node.py
src/anhc_mapping/: CMakeLists.txt  package.xml
src/anhc_mapping/config/: anhc_costmap_params.yaml  costmap_params.yaml
src/anhc_mapping/launch/: anhc_mapping.launch.py
src/anhc_mapping/scripts/: anhc_costmap_node.py  anhc_global_costmap_node.py
src/anhc_perception/: CMakeLists.txt  package.xml
src/anhc_perception/config/: perception_params.yaml
src/anhc_perception/launch/: anhc_perception.launch.py  anhc_perception_full.launch.py
src/anhc_perception/scripts/: anhc_camera_processor_node.py  anhc_obstacle_detector_node.py  anhc_pointcloud_processor_node.py
src/anhc_planning/: package.xml  setup.cfg  setup.py
src/anhc_planning/anhc_planning/: anhc_global_planner_node.py  anhc_path_follower_node.py
src/anhc_planning/anhc_planning/planners/: __init__.py  astar_planner.py  base_planner.py  dijkstra_planner.py  dstar_lite_planner.py  greedy_bfs_planner.py  jps_planner.py  prm_planner.py  rl_planner.py  rrt_star_planner.py  theta_star_planner.py
src/anhc_planning/config/: planner_params.yaml
src/anhc_planning/launch/: anhc_planning.launch.py
src/anhc_sensor_drivers/: CMakeLists.txt  package.xml
src/anhc_simulation/: CMakeLists.txt  package.xml
src/anhc_simulation/config/: bridge_params.yaml
src/anhc_simulation/launch/: anhc_full_system.launch.py  anhc_master.launch.py  anhc_nav.launch.py  anhc_sim.launch.py  anhc_sim_mapping.launch.py  anhc_teleop.launch.py
src/anhc_simulation/maps/: anhc_indoor_map.pgm  anhc_indoor_map.yaml  anhc_office_map.pgm  anhc_office_map.yaml
src/anhc_simulation/models/: office_v2.mtl
src/anhc_simulation/scripts/: anhc_cmd_vel_idle_gate.py  anhc_gz_frame_static_tf.py  anhc_initialpose_odom_stamp.py  anhc_initialpose_to_gz.py  anhc_joint_state_stamp_guard.py  anhc_odom_tf_broadcaster.py  anhc_odom_tf_node.py  anhc_scan_frame_relay.py
src/anhc_simulation/worlds/: anhc_factory.sdf  anhc_indoor.sdf  anhc_office_v2.sdf
src/anhc_viz/: package.xml  setup.cfg  setup.py
src/anhc_viz/anhc_viz/: anhc_dashboard_panel.py  costmap_color_relay.py
src/anhc_viz/rviz/: anhc_full_system.rviz  anhc_mapping.rviz  anhc_nav.rviz
src/anhc_viz/scripts/: anhc_plot_comparison.py  anhc_plot_results.py  costmap_color_relay.py
