<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>anhc_benchmark</name>
  <version>0.0.0</version>
  <description>Algorithm benchmarking and comparison framework for the anhc autonomous vehicle</description>
  <maintainer email="huynhcongan2442004@gmail.com">anhuynh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>ros_gz_interfaces</depend>

  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
