<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>anhc_simulation</name>
  <version>0.0.0</version>
  <description>Gazebo Harmonic worlds, models, and launch files for the anhc autonomous vehicle simulation</description>
  <maintainer email="huynhcongan2442004@gmail.com">anhuynh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <depend>gz-sim8</depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>anhc_description</depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
